--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 240, 27%, 98%;
     --foreground: 222.2 84% 4.9%;
 
     --card: 0 0% 100%;
@@ -33,10 +33,18 @@
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
+
+    --sidebar: 231, 20%, 27%;
+    --violet: 252, 94%, 67%;
+    --violet-light: 252, 100%, 73%;
+    --headings: 228, 29%, 7%;
+    --subheadings: 231, 20%, 61%;
+    --filter: 0, 0%, 100%;
+    --shadow-custom:0 10px 20px rgba(72, 84, 159, 0.25);
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
+    --background: 233, 30%, 11%;
     --foreground: 210 40% 98%;
 
     --card: 222.2 84% 4.9%;
@@ -63,6 +71,11 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
+
+    --headings: 0, 0%, 100%;
+    --subheadings: 231, 73%, 93%;
+    --filter: 233, 30%, 21%;
+    --shadow-custom: 0 10px 20px rgba(0, 0, 0, 0.25);
   }
 }
 
@@ -74,3 +87,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* @layer utilities {
+  .shadow-custom-light {
+    box-shadow: 0 10px 20px rgba(72, 84, 159, 0.25);
+  }
+  .shadow-custom-dark {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+  }
+} */
